--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,12 @@
     "watch": "tsc -w",
     "start": "node -r dotenv/config dist/index.js dotenv_config_path=.env",
     "dev": "nodemon --exec ts-node -r dotenv/config src/index.ts dotenv_config_path=.env",
-    "dev-js": "nodemon node -r dotenv/config dist/index.js dotenv_config_path=.env"
+    "dev-js": "nodemon --exec node -r dotenv/config dist/index.js dotenv_config_path=.env"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.2",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
@@ -20,9 +22,11 @@
   "dependencies": {
     "apollo-server-express": "^2.18.1",
     "argon2": "^0.27.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
     "type-graphql": "^1.0.0",
     "typeorm": "^0.2.26"
