--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.2",
@@ -23,6 +24,7 @@
     "apollo-server-express": "^2.18.1",
     "argon2": "^0.27.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
